--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             },
             computed: {
                 getData() {
-                    const url = 'https://v0.ovapi.nl/stopareacode/BdOud';
+                    const url = 'http://v0.ovapi.nl/stopareacode/BdOud';
                     let options = {
                         method: 'GET'
                     }
